# Stoppage-Time

./: .env.example  .gitignore  API_DOCUMENT.md  Procfile  README.md  cli.py  config.py  main.py  pyproject.toml  requirements.txt  test_ledger_submit.py  worldcup-arena-sample-agent.ipynb
.chroma/: chroma.sqlite3
.github/workflows/: agent.yml
agent/: bet_manager.py  orchestrator.py  reasoning.py  reasoning_logger.py  strategy.py  tool_executor.py
agent/memory/: ltm.py  stssm.py
agent/prompts/: bet_manager_prompt.md  reasoning_prompt.md  system_prompt.md  tactics_prompt.md
agents/: search.py  tactics_agent.py
backend/: app.py  auth.py  config.py  main.py  scheduler.py
backend/routers/: auth.py  bets.py  logs.py  public.py  queue.py
config/: settings.py  stat_types.py
data/: identity.py  polymarket.py  sportmonks.py  supabase.py  tactics.py  weather.py
data/news/: embedder.py  fetcher.py  query.py  store.py
ledger/: logger.py  reader.py
notebooks/: backtest_ml_vs_bookmakers.ipynb  eda.ipynb  eda_v2.ipynb  worldcup-arena-sample-agent.ipynb  worldcup-gemini-agent.ipynb
prompts/: tactics_prompt.md
service/: past_match_formatter.py  prompt_builder.py  schedule.py
tests/: test_bet_manager.py  test_identity.py  test_ledger.py  test_ltm.py  test_news.py  test_orchestrator.py  test_polymarket.py  test_reasoning.py  test_sportmonks.py  test_stssm.py  test_supabase.py  test_tactics.py  test_tool_executor.py  test_weather.py
tools/: search_tool.py  tactics_tool.py
