[project]
name = "stoppage-time"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.12",
    "google-genai>=2.8.0",
    "pandas>=3.0.3",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "supabase>=2.31.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-jose[cryptography]>=3.3.0",
    "apscheduler>=3.10.4",
    "python-multipart>=0.0.12",
    "httpx>=0.28.1",
]
[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "live: marks tests that make real API calls (deselect with -m 'not live')",
]
